# my_public_ip

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
lib/: Cargo.toml
my_public_ip_client/: Cargo.toml  LICENSE-MIT
my_public_ip_client/src/: main.rs
my_public_ip_lib/: Cargo.toml
my_public_ip_lib/src/: lib.rs
my_public_ip_server/: Cargo.toml  LICENSE-APACHE  log4rs.yaml  my_public_ip.toml.example
my_public_ip_server/src/: api.rs  config.rs  error.rs  main.rs  store.rs
my_public_ip_server/tests/: common.rs
server/: Cargo.toml  config.toml  log4rs.yaml
server/src/: api.rs  config.rs  lib.rs  main.rs
server/tests/: test_config.rs  test_lib.rs  test_store.rs
