[package]
name = "my_public_ip_client"
version = "0.5.0"
authors = ["Bob <nottxy@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "My public ip client"
documentation = "https://docs.rs/my_public_ip_client"
repository = "https://github.com/nottxy/my_public_ip"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
time = "0.2"
log = "0.4"
env_logger = "0.8"
structopt = { version = "0.3", default-features = false }

[dependencies.my_public_ip_lib]
version = "0.4.0"
