[package]
name = "my_public_ip_lib"
version = "0.4.0"
authors = ["Bob <nottxy@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "My public ip lib"
documentation = "https://docs.rs/my_public_ip_lib"
repository = "https://github.com/nottxy/my_public_ip"

[dependencies]
serde = { version = '1.0', features = ['derive'] }
serde_json = "1.0"
