[package]
name = "my_public_ip_client"
version = "0.2.0"
authors = ["Bob <nottxy@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "My public ip client"
documentation = "https://docs.rs/my_public_ip_client"
repository = "https://github.com/nottxy/my_public_ip"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
time = "0.2"
structopt = { version = "0.3", default-features = false }

[dependencies.my_public_ip_lib]
version = "~0.1.0"
path = "../my_public_ip_lib"