[package]
name = "my_public_ip_server"
version = "0.1.0"
authors = ["Bob <nottxy@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "My public ip server"
documentation = "https://docs.rs/my_public_ip_server"
repository = "https://github.com/nottxy/my_public_ip"

[dependencies]
serde = { version = '1.0', features = ['derive'] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
sled = "0.34"
time = { version = "0.2", features = ['serde'] }
actix-web = "3.3"
env_logger = "0.8"

[dependencies.my_public_ip_lib]
version = "~0.1.0"
path = "../my_public_ip_lib"